fix layout on smaller screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,7 +25,7 @@ body{
   border-width: 3px;
   border-style: none;
 }
-@media(max-width: 1200px;){
+@media(max-width: 1200px){
   #contentHolder{
     width: 90vh;
   }
@@ -80,8 +80,8 @@ body{
   line-height: 60px;
 }
 
-@media (max-width: 400px){
-  body{
-    
+@media (max-width: 590px){
+  #contentHolder{
+    margin-top: -90vh;
   }
 }
